<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSettingContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/full_background">

    <TextView
        android:id="@+id/tvSettting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personelSetting"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imBackArrow" />

    <ImageView
        android:id="@+id/imBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/arrow_back" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvSettting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tvNightNode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/nightMode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/switchBtn"
        app:layout_constraintEnd_toStartOf="@+id/switchBtn"
        app:layout_constraintTop_toTopOf="@+id/switchBtn" />

    <TextView
        android:id="@+id/tvDefaultCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/default_coin"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvNightNode"
        app:layout_constraintTop_toBottomOf="@+id/tvNightNode" />

    <Spinner
        android:id="@+id/spinnerCoin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:entries="@array/coin"
        app:layout_constraintStart_toEndOf="@+id/tvDefaultCoin"
        app:layout_constraintTop_toTopOf="@+id/tvDefaultCoin"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>